# SPDX-FileCopyrightText: 2024 The Chaste Authors
# SPDX-License-Identifier: CC0-1.0

[workspace]
resolver = "2"
members = [
    "chaste",
    "chaste-bun",
    "chaste-cli",
    "chaste-npm",
    "chaste-pnpm",
    "chaste-types",
    "chaste-yarn",
    "fuzz",
    "yarn-state",
]

[workspace.package]
version = "0.5.0"
authors = ["The Chaste Authors"]
license = "Apache-2.0 OR BSD-2-Clause"
categories = ["parser-implementations", "data-structures"]
repository = "https://codeberg.org/selfisekai/chaste"
exclude = ["/test_workspaces", "/tests", "tests.rs"]

[workspace.dependencies]
chaste = { version = "=0.5.0", default-features = false, path = "chaste" }
chaste-bun = { version = "=0.5.0", default-features = false, path = "chaste-bun" }
chaste-npm = { version = "=0.5.0", default-features = false, path = "chaste-npm" }
chaste-types = { version = "=0.5.0", default-features = false, path = "chaste-types" }
chaste-pnpm = { version = "=0.5.0", default-features = false, path = "chaste-pnpm" }
chaste-yarn = { version = "=0.5.0", default-features = false, path = "chaste-yarn" }

yarn-state = { version = "0.1.2", default-features = false, path = "yarn-state" }

anyhow = "1.0"
arbitrary = "1"
argh = "0.1"
assert_cmd = "2.0"
concat-idents = "1.1"
json5 = "0.4.1"
nodejs-semver = "4.1.0"
nom = "8.0.0"
serde = "1.0.185"
serde_json = "1.0"
serde_norway = "0.9"
ssri = { version = "9.2", default-features = false }
thiserror = "2.0"
yarn-lock-parser = "0.11.0"

[profile.release]
lto = true

[patch.crates-io]
yarn-lock-parser = { git = "https://github.com/selfisekai/yarn-lock-parser.git", branch = "peer-dependencies" }
