# SPDX-FileCopyrightText: 2024 The Chaste Authors
# SPDX-License-Identifier: CC0-1.0

[package]
name = "chaste-bun"
description = "Parser for bun lockfiles"
edition = "2021"
keywords = ["lockfile", "bun"]
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
exclude.workspace = true

[features]
fuzzing = ["dep:arbitrary"]

[dependencies]
chaste-types.workspace = true
json5.workspace = true
nom.workspace = true
thiserror.workspace = true

[dependencies.arbitrary]
workspace = true
optional = true
features = ["derive"]

[dependencies.serde]
workspace = true
features = ["derive"]
