# SPDX-FileCopyrightText: 2024 The Chaste Authors
# SPDX-License-Identifier: CC0-1.0

[package]
name = "chaste-cli"
edition = "2021"
description = "Parser for npmjs lockfiles (cli)"
categories = ["command-line-utilities", "development-tools"]
keywords = ["lockfile", "npmjs", "npm", "yarn"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "chaste"
path = "src/main.rs"

[features]
default = ["npm", "yarn"]

npm = ["chaste/npm"]
yarn = ["chaste/yarn", "yarn-berry", "yarn-classic"]
yarn-berry = ["chaste/yarn-berry"]
yarn-classic = ["chaste/yarn-classic"]

[dependencies]
anyhow.workspace = true
argh.workspace = true

[dependencies.chaste]
workspace = true
default-features = false
