# SPDX-FileCopyrightText: 2024 The Chaste Authors
# SPDX-License-Identifier: CC0-1.0

[package]
name = "chaste-cli"
edition = "2021"
description = "Parser for npmjs lockfiles (cli)"
categories = ["command-line-utilities", "development-tools"]
keywords = ["lockfile", "npmjs", "npm", "yarn", "pnpm"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[[bin]]
name = "chaste"
path = "src/main.rs"

[features]
default = ["bun", "npm", "pnpm", "yarn"]

bun = ["chaste/bun"]
npm = ["chaste/npm"]
pnpm = ["chaste/pnpm"]
yarn = ["chaste/yarn", "yarn-berry", "yarn-classic"]
yarn-berry = ["chaste/yarn-berry"]
yarn-classic = ["chaste/yarn-classic"]

[dependencies]
anyhow.workspace = true
argh.workspace = true

[dependencies.chaste]
workspace = true
default-features = false

[dev-dependencies]
assert_cmd.workspace = true
