# SPDX-FileCopyrightText: 2024 The Chaste Authors
# SPDX-License-Identifier: CC0-1.0

[package]
name = "chaste-types"
description = "Parser for npmjs lockfiles (types package)"
edition = "2021"
keywords = ["chaste", "lockfile"]
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[features]
default = []

snelleutf-static = ["snelleutf", "snelleutf/static-link"]

[dependencies]
nodejs-semver.workspace = true
nom.workspace = true
percent-encoding.workspace = true
ssri.workspace = true
thiserror.workspace = true

[dependencies.snelleutf]
workspace = true
optional = true
