# SPDX-FileCopyrightText: 2024 The Chaste Authors
# SPDX-License-Identifier: CC0-1.0

[package]
name = "chaste"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["npm", "yarn"]

npm = ["chaste-npm"]
yarn = ["chaste-yarn"]

[dependencies]
chaste-types.workspace = true
thiserror.workspace = true

[dependencies.chaste-npm]
workspace = true
optional = true

[dependencies.chaste-yarn]
workspace = true
optional = true
