# SPDX-FileCopyrightText: 2024 The Chaste Authors
# SPDX-License-Identifier: CC0-1.0

[package]
name = "chaste"
description = "Parser for npmjs lockfiles"
edition = "2021"
keywords = ["lockfile", "npm"]
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[features]
default = ["npm", "yarn"]

npm = ["dep:chaste-npm"]
yarn = ["yarn-berry", "yarn-classic"]
yarn-berry = ["dep:chaste-yarn", "chaste-yarn/berry"]
yarn-classic = ["dep:chaste-yarn", "chaste-yarn/classic"]

[dependencies]
chaste-types.workspace = true
thiserror.workspace = true

[dependencies.chaste-npm]
workspace = true
optional = true

[dependencies.chaste-yarn]
workspace = true
optional = true
default-features = false
