# SPDX-FileCopyrightText: 2025 The Chaste Authors
# SPDX-License-Identifier: CC0-1.0

[package]
name = "chaste-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary.workspace = true

chaste-bun = { workspace = true, features = ["fuzzing"] }
chaste-npm = { workspace = true, features = ["fuzzing"] }
chaste-types.workspace = true
chaste-yarn = { workspace = true, features = ["berry", "classic", "fuzzing"] }

[[bin]]
name = "bun-parse"
path = "fuzz_targets/bun/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "npm-parse"
path = "fuzz_targets/npm/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "types-module_path"
path = "fuzz_targets/types/module_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "types-name"
path = "fuzz_targets/types/name.rs"
test = false
doc = false
bench = false

[[bin]]
name = "types-svs"
path = "fuzz_targets/types/svs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "yarn-parse"
path = "fuzz_targets/yarn/parse.rs"
test = false
doc = false
bench = false
